--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -3,22 +3,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <title>Inicio - Guaudería</title>
     <link rel="shorcut icon" href="../images/favicon1.png">
 </head>
 <body>
     <header>
-        <a href="../index.html"><img src="../images/logonav.png" class="header__imglogo" alt="logo navegador"></a>
-        <nav>
-            <ul class="nav__ul">
-                <li class="nav__li" ><a href="../index.html">Inicio</a></li>
-                <li class="nav__li" ><a href="./pet-sitter.html">Guardería</a></li>
-                <li class="nav__li" ><a href="./dog-training.html">Adiestramiento</a></li>
-                <li class="nav__li" ><a href="./work-with-us.html">Trabaja con Nosotros</a></li>
-                <li class="nav__li" ><span>Sobre Nosotros</span></li>
-            </ul>
-         </nav>
+        <nav class="navbar navbar-expand-md bg-body-tertiary">
+            <div class="container-fluid">
+                    <a href="../index.html"><img src="../images/logonav.png" class="header__imglogo" alt="logo navegador"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <ul class="navbar-nav">
+                                <li class="nav__li" ><a href="../index.html">Inicio</a></li>
+                                <li class="nav__li" ><a href="./pet-sitter.html">Guardería</a></li>
+                                <li class="nav__li" ><a href="./dog-training.html">Adiestramiento</a></li>
+                                <li class="nav__li" ><a href="./work-with-us.html">Trabaja con Nosotros</a></li>
+                                <li class="nav__li" ><span>Sobre Nosotros</span></li>
+                            </ul>
+                        </div>
+                    </div>
+            </div>
+        </nav>   
     </header>
     <Main>
         <section id="aboutusBanner">
@@ -75,5 +85,6 @@
             <h3>2023</h3>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
