--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <title>Inicio - Guaudería</title>
@@ -32,14 +33,18 @@
     </header>
     <Main>
         <section id="presentationBanner">
-            <div>
-                <img src="./images/logonav.png" class="presentationBanner__image" alt="">
-            </div>
-            <div>
-                <h1 class="presentationBanner__titule">Bienvenidos a la Guaudería</h1>
-                <h2 class="presetnationBanner__subtitule">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed a assumenda libero, tenetur facere vero quaerat labore eos nesciunt! Magni ducimus velit corporis est. Odio assumenda iste maxime id delectus?</h2>
-                <div>
-                    <button>Reservar</button>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="presentationBannerdiv col-12 col-md-6">
+                        <img src="./images/logonav.png" class="presentationBanner__image animate__animated animate__fadeInLeft" alt="">
+                    </div>
+                    <div class="presentationBannerdiv col-12 col-md-6 animate__animated animate__fadeInRight">
+                        <h1 class="presentationBanner__titule">Bienvenidos a la Guaudería</h1>
+                        <h2 class="presetnationBanner__subtitule">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed a assumenda libero, tenetur facere vero quaerat labore eos nesciunt! Magni ducimus velit corporis est. Odio assumenda iste maxime id delectus?</h2>
+                        <div>
+                            <button><a href="./pages/pet-sitter.html">Reservar</a></button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
