--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-md bg-body-tertiary">
             <div class="container-fluid">
-                    <a href="../index.html"><img src="../images/logonav.png" class="header__imglogo" alt="logo navegador"></a>
+                    <a href="../index.html"><img src="./images/logonav.png" class="header__imglogo" alt="logo navegador"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
