--- a/pages/dog-training.html
+++ b/pages/dog-training.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <title>Adiestramiento - Guaudería</title>
@@ -32,12 +33,20 @@
     </header>
     <Main>
         <section id="dogtrainigBanner">
-            <div>
-                <h1 class="dogtrainigBanner__titule">Adiestramiento Online</h1>
-                <h2 class="dogtrainigBanner__subtitule">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
-            </div>
-            <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/78ot-uvLjO0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6 animate__animated animate__fadeInLeft">
+                        <div class="dogtrainigBannerdiv">
+                            <h1 class="dogtrainigBanner__titule">Adiestramiento Online</h1>
+                            <h2 class="dogtrainigBanner__subtitule">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 animate__animated animate__fadeInRight">
+                        <div class="dogtrainigBannerdiv">
+                            <iframe width="400" height="200" src="https://www.youtube.com/embed/78ot-uvLjO0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>    
             </div>
         </section>
         <section id="dogtrainingVermas">
