aplico sass al resto de paginas y cambio un poco el formato agregando waves agregando ademas carruseles

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </nav>
     </header>
     <Main>
+        <section class="waveup">
+        </section>
         <section id="presentationBanner">
             <div class="container-fluid">
                 <div class="row">
@@ -40,7 +42,7 @@
                     </div>
                     <div class="presentationBannerdiv col-12 col-md-6 animate__animated animate__fadeInRight">
                         <h1 class="presentationBanner__titule">Bienvenidos a la Guaudería</h1>
-                        <h2 class="presetnationBanner__subtitule">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed a assumenda libero, tenetur facere vero quaerat labore eos nesciunt! Magni ducimus velit corporis est. Odio assumenda iste maxime id delectus?</h2>
+                        <h2 class="presetnationBanner__subtitule">Lorem ipsum dolor sit amet consectetur. Nec et sagittis cursus venenatis feugiat nulla. At et maecenas nullam aliquet in porta praesent urna massa. Commodo integer sed feugiat volutpat magna. Ut felis imperdiet morbi sit iaculis. Arcu nisi dolor commodo platea nunc feugiat orci volutpat urna. Lectus varius scelerisque imperdiet sit</h2>
                         <div>
                             <button><a href="./pages/pet-sitter.html">Reservar</a></button>
                         </div>
@@ -48,6 +50,7 @@
                 </div>
             </div>
         </section>
+        <section class="wavedown"></section>
         <section id="testimonies">
             <section id="testimonies__titule">
                 <h2>Los que confían en nosotros dicen:</h2>
@@ -91,11 +94,17 @@
                 </div>
             </Section>
         </section>
+        <section class="waveup"></section>
+        <section class="knowAboutUsButton">
+            <button>Conocenos mejor
+            </button>
+        </section>
+        <section class="wavedown"></section>
     </Main>
     <footer>
         <div class="footerLinks">
-            <a href="https://www.instagram.com/guauderia_bariloche/"><img src="./images/instagrampink.png" alt=""></a>
-            <a href="https://www.facebook.com/guau.deria.7"><img src="./images/facebookpink.png" alt=""></a>
+            <a href="https://www.instagram.com/guauderia_bariloche/"><img src="./images/bxl-instagram-alt 1.svg" alt=""></a>
+            <a href="https://www.facebook.com/guau.deria.7"><img src="./images/bxl-facebook-circle 1.svg" alt=""></a>
         </div>
         <div class="footerCopyrights">
             <img src="images/copyrightgray.png" alt="">
