--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -31,37 +31,110 @@
         </nav>   
     </header>
     <Main>
-        <section id="aboutusBanner">
-            <div class="aboutusBanner__card">
-                <img src="../images/dario1.PNG" alt="">
+        <section id="aboutusCarousel">
+            <div class="container-fluid">
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <div id="carouselExampleRide2" class="carousel slide" data-bs-ride="true">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="../images/kala2.PNG" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../images/dario2.PNG" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../images/kala5.PNG" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide2" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide2" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <div id="carouselExampleRide3" class="carousel slide" data-bs-ride="true">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="../images/lore3.PNG" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../images/kala3.PNG" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../images/dario3apa.PNG" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide3" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide3" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="../images/dario1.PNG" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../images/lore1.PNG" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../images/kala1.PNG" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../images/lore2.PNG" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>  
+                  </div>
+                </div>
+            </div>
+            
+                <!-- <img src="../i
             </div>
             <div class="aboutusBanner__card">
-                <img src="../images/lore1.PNG" alt="">
-            </div>
-            <div class="aboutusBanner__card">
-                <img src="../images/kala1.PNG" alt="">
+                <img src="..G" alt="">
             </div>            
             <div class="aboutusBanner__card">
-                <img src="../images/dario2.PNG" alt="">
+                <img src="" alt="">
             </div>
             <div class="aboutusBanner__card">
-                <img src="../images/lore2.PNG" alt="">
+                <img src="" alt="">
             </div>
             <div class="aboutusBanner__card">
                 <img src="../images/kala2.PNG" alt="">
             </div>
             <div class="aboutusBanner__card">
-                <img src="../images/lore3.PNG" alt="">
+                <img src="" alt="">
             </div>            
             <div class="aboutusBanner__card">
-                <img src="../images/kala3.PNG" alt="">
+                <img src="" alt="">
             </div>
             <div class="aboutusBanner__card">
-                <img src="../images/dario3apa.PNG" alt="">
+                <img src="" alt="">
             </div>
             <div class="aboutusBanner__card">
-                <img src="../images/kala5.PNG" alt="">
-            </div>             
+                <img src="" alt="">
+            </div>              --> -->
         </section>
         <section id="aboutusHistory">
             <div>
