--- a/pages/dog-training.html
+++ b/pages/dog-training.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Adiestramiento - Guaudería</title>
     <link rel="shorcut icon" href="../images/favicon1.png">
 </head>
@@ -33,30 +33,132 @@
     </header>
     <Main>
         <section id="dogtrainigBanner">
+            <img src="../images/wave-svg-up.svg" alt="">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 col-md-6 animate__animated animate__fadeInLeft">
-                        <div class="dogtrainigBannerdiv">
+                    <div class="col-12 col-md-6 animate__animated animate__fadeInRight align-items-center   ">
+                        <div class="dogtrainigTitulediv">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 animate__animated animate__fadeInLeft align-items-center">
+                        <div class="dogtrainigTitulediv">
                             <h1 class="dogtrainigBanner__titule">Adiestramiento Online</h1>
                             <h2 class="dogtrainigBanner__subtitule">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 animate__animated animate__fadeInRight">
-                        <div class="dogtrainigBannerdiv">
-                            <iframe width="400" height="200" src="https://www.youtube.com/embed/78ot-uvLjO0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    
+                </div>    
+            </div>
+            
+            <img src="../images/wave-svg-down.svg" alt="">
+        </section>
+        <section id="dogtraininggiff">
+            <div class="waveup"></div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6 animate__animated animate__fadeInLeft align-items-center">
+                        <div>
+                            <img class="giff" src="../images/giff/Sabes a que edad es más recomendable separar a los cachorros de su mama.gif" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 animate__animated animate__fadeInRight align-items-center   ">
+                        <div>
+                            <img class="giff" src="../images/giff/Light Green and Blue Beach Dog Animated Social Media Graphic.gif" alt="">
                         </div>
                     </div>
                 </div>    
             </div>
+            <div class="wavedown"></div>
         </section>
+        <section id="dogtrainingCarrusel">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-12 col-md-4">
+                <div id="carouselExampleRide2" class="carousel slide" data-bs-ride="true">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="../images/Carousel 3/1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 3/2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 3/3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 3/4.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 3/5.jpg" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide2" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide2" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>
+              <div class="col-12 col-md-4">
+                <img class="giff" src="../images/giff/Sabes cuál es la diferencia entre.gif" alt="">
+              </div>
+              <div class="col-12 col-md-4">
+                <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="../images/Carousel 1/1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 1/2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 1/3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 1/4.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 1/5.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 1/6.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 1/7.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 1/8.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/Carousel 1/9.jpg" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>  
+              </div>
+            </div>
+          </div>
+        </section>
+        <div class="waveup"></div>
         <section id="dogtrainingVermas">
             <button>Ver más</button>
         </section>
+        <div class="wavedown"></div>
     </Main>
     <footer>
         <div class="footerLinks">
-            <a href="https://www.instagram.com/guauderia_bariloche/"><img src="../images/instagrampink.png" alt=""></a>
-            <a href="https://www.facebook.com/guau.deria.7"><img src="../images/facebookpink.png" alt=""></a>
+            <a href="https://www.instagram.com/guauderia_bariloche/"><img src="../images/bxl-instagram-alt 1.svg" alt=""></a>
+            <a href="https://www.facebook.com/guau.deria.7"><img src="../images/bxl-facebook-circle 1.svg" alt=""></a>
         </div>
         <div class="footerCopyrights">
             <img src="../images/copyrightgray.png" alt="">
