--- a/pages/pet-sitter.html
+++ b/pages/pet-sitter.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Guardería - Guaudería</title>
     <link rel="shorcut icon" href="../images/favicon1.png">
 </head>
@@ -32,11 +32,19 @@
         </nav>
     </header>
     <Main>
+        <section class="waveup"></section>
         <section id="petsitterBanner">
             <h1 class="petsitterBanner__titule animate__animated animate__fadeInLeft">Guardería</h1>
             <h2 class="petsitterBanner__subtitule animate__animated animate__fadeInRight">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
         </section>
+        <section class="wavedown"></section>   
+        <div class="petsitterimage">
+            <img src="../images/wave-svg-up.svg" alt="">
+            <img src="../images/wave-svg-down.svg" alt="">
+        </div>
+        <section class="waveup"></section>
         <section id="petsitterForm">
+            <form action="">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-md-4">
@@ -128,13 +136,15 @@
 
                     </div>
 
-                </div>     
+                </div>   
+            </form>  
         </section>
+        <section class="wavedown"></section>
     </Main>
     <footer>
         <div class="footerLinks">
-            <a href="https://www.instagram.com/guauderia_bariloche/"><img src="../images/instagrampink.png" alt=""></a>
-            <a href="https://www.facebook.com/guau.deria.7"><img src="../images/facebookpink.png" alt=""></a>
+            <a href="https://www.instagram.com/guauderia_bariloche/"><img src="../images/bxl-instagram-alt 1.svg" alt=""></a>
+            <a href="https://www.facebook.com/guau.deria.7"><img src="../images/bxl-facebook-circle 1.svg" alt=""></a>
         </div>
         </div>
         <div class="footerCopyrights">
