--- a/pages/work-with-us.html
+++ b/pages/work-with-us.html
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Inicio - Guaudería</title>
     <link rel="shorcut icon" href="../images/favicon1.png">
 </head>
@@ -32,37 +33,62 @@
     </header>
     <Main>
         <section id="workwithusBanner">
-            <h1 class="workwithusBanner__titule">Formá parte de nuestro equipo</h1>
-            <h2 class="workwithusBanner__subtitule">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
+            <img src="../images/wave-svg-up.svg" alt="">
+            <img src="../images/wave-svg-down.svg" alt="">
         </section>
+        <div class="waveup"></div>
         <section id="workwithusForm">
-            <div class="workwithusForm__left">
-                <div class="formBasic">
-                    <label for="">Nombre y Apellido</label>
-                    <input id="workwithus-fullname" type="text">
-                </div>
-                    <div class="formBasic">
-                    <label for="">Ciuduad de residencia</label>
-                <input id="workwithus-city" type="text">
-                </div>
-                    <div class="formBasic">
-                    <label for="">Teléfono</label>
-                    <input id="workwithus-phone" type="text">
-                </div>
-                <div class="formBasic">
-                    <label for="">Email</label>
-                    <input id="workwithus-email" type="text">
-                </div>
-            </div>
-            <div class="formButton">
-                <button>Enviar Información</button>
-            </div>      
+            <form action="">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="workwithusBanner__titule animate__animated animate__fadeInDownBig">Formá parte de nuestro equipo</h1>
+                            <h2 class="workwithusBanner__subtitule animate__animated animate__fadeInDownBig">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <div class="row">
+                                <div class="formBasic"> 
+                                    <label for="">Nombre y Apellido</label>
+                                    <input id="workwithus-fullname" type="text">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="formBasic"> 
+                                    <label for="">Ciuduad de residencia</label>
+                                    <input id="workwithus-city" type="text">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="formBasic"> 
+                                    <label for="">Teléfono</label>
+                                    <input id="workwithus-phone" type="text">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="formBasic"> 
+                                    <label for="">Email</label>
+                                     <input id="workwithus-email" type="text">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="row">
+                                <div class="formButton">
+                                <button>Enviar Información</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>   
+            </form>  
         </section>
+        <div class="wavedown"></div>
     </Main>
     <footer>
         <div class="footerLinks">
-            <a href="https://www.instagram.com/guauderia_bariloche/"><img src="../images/instagrampink.png" alt=""></a>
-            <a href="https://www.facebook.com/guau.deria.7"><img src="../images/facebookpink.png" alt=""></a>
+            <a href="https://www.instagram.com/guauderia_bariloche/"><img src="../images/bxl-instagram-alt 1.svg" alt=""></a>
+            <a href="https://www.facebook.com/guau.deria.7"><img src="../images/bxl-facebook-circle 1.svg" alt=""></a>
         </div>
         <div class="footerCopyrights">
             <img src="../images/copyrightgray.png" alt="">
