avance en general paso intermedio

--- a/pages/dog-training.html
+++ b/pages/dog-training.html
@@ -43,7 +43,7 @@
                     <div class="col-12 col-md-6 animate__animated animate__fadeInLeft align-items-center">
                         <div class="dogtrainigTitulediv">
                             <h1 class="dogtrainigBanner__titule">Adiestramiento Online</h1>
-                            <h2 class="dogtrainigBanner__subtitule">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
+                            <h2 class="dogtrainigBanner__subtitule">Quieres vivir y convivir con tu compañero peludo en armonía, en un ambiente relajado y con óptimo bienestar. Sabías que la mayoría de los problemas de conducta es porque no sabemos reconocer y por lo tanto cubrir todas las necesidades de nuestro compi?</h2>
                         </div>
                     </div>
                     
@@ -55,14 +55,19 @@
         <section id="dogtraininggiff">
             <div class="waveup"></div>
             <div class="container-fluid">
+              <dir class="row">
+                <div class="col-12 align-items-center">
+                  <h2>Recomendaciones para Cachorros</h2>
+                </div>
+              </dir>
                 <div class="row">
                     <div class="col-12 col-md-6 animate__animated animate__fadeInLeft align-items-center">
-                        <div>
+                        <div class="align-items-center">
                             <img class="giff" src="../images/giff/Sabes a que edad es más recomendable separar a los cachorros de su mama.gif" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 animate__animated animate__fadeInRight align-items-center   ">
-                        <div>
+                        <div class="align-items-center">
                             <img class="giff" src="../images/giff/Light Green and Blue Beach Dog Animated Social Media Graphic.gif" alt="">
                         </div>
                     </div>
@@ -72,8 +77,13 @@
         </section>
         <section id="dogtrainingCarrusel">
           <div class="container-fluid">
+            <dir class="row">
+              <div class="col-12 align-items-center">
+                <h2>Recomendaciones de Educación</h2>
+              </div>
+            </dir>
             <div class="row">
-              <div class="col-12 col-md-4">
+              <div class="col-12 col-md-4 align-items-center">
                 <div id="carouselExampleRide2" class="carousel slide" data-bs-ride="true">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -102,10 +112,10 @@
                   </button>
                 </div>
               </div>
-              <div class="col-12 col-md-4">
+              <div class="col-12 col-md-4 align-items-center">
                 <img class="giff" src="../images/giff/Sabes cuál es la diferencia entre.gif" alt="">
               </div>
-              <div class="col-12 col-md-4">
+              <div class="col-12 col-md-4 align-items-center">
                 <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
