--- a/pages/pet-sitter.html
+++ b/pages/pet-sitter.html
@@ -35,7 +35,9 @@
         <section class="waveup"></section>
         <section id="petsitterBanner">
             <h1 class="petsitterBanner__titule animate__animated animate__fadeInLeft">Guardería</h1>
-            <h2 class="petsitterBanner__subtitule animate__animated animate__fadeInRight">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
+            <h2 class="petsitterBanner__subtitule animate__animated animate__fadeInRight">Te gusta viajar y en algunos lugares se te complica ir acompañado de tu compi peludo? Priorizas su bienestar?</h2>
+            <h2 class="petsitterBanner__subtitule animate__animated animate__fadeInRight">En Guaudería Bariloche lo cuidamos como uno más de la família. Lo acogemos en nuestra casa durante tu ausencia y nos ajustamos a su rutina diària (dietas, paseos, juegos...)</h2>
+            <h2 class="petsitterBanner__subtitule animate__animated animate__fadeInRight">Pasará a ser un mimado más de nuestro hogar.</h2>
         </section>
         <section class="wavedown"></section>   
         <div class="petsitterimage">
@@ -44,6 +46,7 @@
         </div>
         <section class="waveup"></section>
         <section id="petsitterForm">
+            <h2>Escribinos un whats app o completá el siguiente formulario para una respuesta mas rápida</h2>
             <form action="">
             <div class="container-fluid">
                 <div class="row">
