--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     </div>
                     <div class="presentationBannerdiv col-12 col-md-6 animate__animated animate__fadeInRight">
                         <h1 class="presentationBanner__titule">Bienvenidos a la Guaudería</h1>
-                        <h2 class="presetnationBanner__subtitule">Lorem ipsum dolor sit amet consectetur. Nec et sagittis cursus venenatis feugiat nulla. At et maecenas nullam aliquet in porta praesent urna massa. Commodo integer sed feugiat volutpat magna. Ut felis imperdiet morbi sit iaculis. Arcu nisi dolor commodo platea nunc feugiat orci volutpat urna. Lectus varius scelerisque imperdiet sit</h2>
+                        <h2 class="presetnationBanner__subtitule">En familia y sin caniles cuidamos tu mascotas cuando tengas que ausentarse por unas horas o días.</h2>
                         <div>
-                            <button><a href="./pages/pet-sitter.html">Reservar</a></button>
+                            <button class="button_primary"><a href="./pages/pet-sitter.html">Reservar</a></button>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <h3 class="cardTestimonies__name">LIFE</h3>
                     <img src="./images/life.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
-                    <p class="cardtestimonies__text">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sequi animi nihil obcaecati quia, at est, natus ducimus necessitatibus assumenda iste cupiditate rerum inventore eligendi autem repellat voluptas fugit fugiat?</p>
+                    <p class="cardtestimonies__text">Hola Lorena! Ya vamos a buscar a Life. Queriamos daros las gracias por estos días de tranquilidad, el hecho de que haya estado con vosotros nos ha dejado descansar y desconectar la cabeza por completo. Ya vemos en los videos que Tuna está super mimada con vosotros!</p>
                 </div>
                 <div class="cardTestimonies">
                     <h3 class="cardTestimonies__name">CARMELA</h3>
@@ -73,7 +73,7 @@
                     <h3 class="cardTestimonies__name">CANDY</h3>
                     <img src="./images/candy.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
-                    <p class="cardtestimonies__text">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sequi animi nihil obcaecati quia, at est, natus ducimus necessitatibus assumenda iste cupiditate rerum inventore eligendi autem repellat voluptas fugit fugiat?</p>
+                    <p class="cardtestimonies__text">Muchas gracias por haber cuidado de Candy. La hemos echado mucho de menos estos dias... a ella parece que no le ha importado mucho jeje. Se nota que lo ha pasado super bien con vosotros. Y muchas gracias por las fotos y los videos, se la ve super contenta.</p>
                 </div>
                 <div class="cardTestimonies">
                     <h3 class="cardTestimonies__name">HEDA</h3>
@@ -85,7 +85,7 @@
                     <h3 class="cardTestimonies__name">FELIPE</h3>
                     <img src="./images/felipe.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
-                    <p class="cardtestimonies__text">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sequi animi nihil obcaecati quia, at est, natus ducimus necessitatibus assumenda iste cupiditate rerum inventore eligendi autem repellat voluptas fugit fugiat?</p>
+                    <p class="cardtestimonies__text">Hola!! Muchas gracias por todas tus respuestas y consejos! Vamos a ponerlo en práctica desde ya!!</p>
                 </div>
                 <div class="cardTestimonies">
                     <h3 class="cardTestimonies__name">LLUNA</h3>
@@ -97,8 +97,7 @@
         </section>
         <section class="waveup"></section>
         <section class="knowAboutUsButton">
-            <button>Conocenos mejor
-            </button>
+            <button><a href="./pages/about-us.html">Conocenos mejor</a></button>
         </section>
         <section class="wavedown"></section>
     </Main>
