segunda parte del avance general

--- a/pages/dog-training.html
+++ b/pages/dog-training.html
@@ -161,7 +161,7 @@
         </section>
         <div class="waveup"></div>
         <section id="dogtrainingVermas">
-            <button>Ver más</button>
+            <button><a href="https://wa.me/+34623021485">  Escribinos un Whatsapp</a></button>
         </section>
         <div class="wavedown"></div>
     </Main>
