--- a/pages/pet-sitter.html
+++ b/pages/pet-sitter.html
@@ -46,7 +46,7 @@
         </div>
         <section class="waveup"></section>
         <section id="petsitterForm">
-            <h2>Escribinos un whats app o completá el siguiente formulario para una respuesta mas rápida</h2>
+            <h2>Escribinos un Whatsapp o completá el siguiente formulario para una respuesta mas rápida</h2>
             <form action="">
             <div class="container-fluid">
                 <div class="row">
