--- a/pages/work-with-us.html
+++ b/pages/work-with-us.html
@@ -41,7 +41,7 @@
             <form action="">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-12 align-items-center">
+                        <div class="col-12">
                             <h1 class="workwithusBanner__titule animate__animated animate__fadeInDownBig">Formá parte de nuestro equipo</h1>
                             <h2 class="workwithusBanner__subtitule animate__animated animate__fadeInDownBig">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
                         </div>
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 align-items-center">
                             <div class="row">
                                 <div class="formButton">
                                 <button>Enviar Información</button>
