--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-md bg-body-tertiary">
             <div class="container-fluid">
-                    <a href="../index.html"><img src="./images/logonav.png" class="header__imglogo" alt="logo navegador"></a>
+                    <a href="./index.html"><img src="./images/logonav.png" class="header__imglogo" alt="logo navegador"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -63,37 +63,49 @@
                     <h3 class="cardTestimonies__name">LIFE</h3>
                     <img src="./images/life.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
+                    <div class="align-items-center">
                     <p class="cardtestimonies__text">Hola Lorena! Ya vamos a buscar a Life. Queriamos daros las gracias por estos días de tranquilidad, el hecho de que haya estado con vosotros nos ha dejado descansar y desconectar la cabeza por completo. Ya vemos en los videos que Tuna está super mimada con vosotros!</p>
-                </div>
-                <div class="cardTestimonies">
-                    <h3 class="cardTestimonies__name">CARMELA</h3>
-                    <img src="./images/carmela.PNG" class="testimonies__image" alt="">
-                    <img src="./images/stars.png" clas="testimonies__stars" alt="">
-                    <p class="cardtestimonies__text">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sequi animi nihil obcaecati quia, at est, natus ducimus necessitatibus assumenda iste cupiditate rerum inventore eligendi autem repellat voluptas fugit fugiat?</p>
-                </div>
-                <div class="cardTestimonies">
-                    <h3 class="cardTestimonies__name">CANDY</h3>
-                    <img src="./images/candy.PNG" class="testimonies__image" alt="">
-                    <img src="./images/stars.png" clas="testimonies__stars" alt="">
-                    <p class="cardtestimonies__text">Muchas gracias por haber cuidado de Candy. La hemos echado mucho de menos estos dias... a ella parece que no le ha importado mucho jeje. Se nota que lo ha pasado super bien con vosotros. Y muchas gracias por las fotos y los videos, se la ve super contenta.</p>
+                    </div>
                 </div>
                 <div class="cardTestimonies">
                     <h3 class="cardTestimonies__name">HEDA</h3>
                     <img src="./images/heda.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
-                    <p class="cardtestimonies__text">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sequi animi nihil obcaecati quia, at est, natus ducimus necessitatibus assumenda iste cupiditate rerum inventore eligendi autem repellat voluptas fugit fugiat?</p>
+                    <div class="align-items-center">
+                    <p class="cardtestimonies__text">Muy buen trato y conocimiento de los chicos con las mascotas! Quedé encantada con ellos</p>
+                    </div>
+                </div>
+                <div class="cardTestimonies">
+                    <h3 class="cardTestimonies__name">CANDY</h3>
+                    <img src="./images/candy.PNG" class="testimonies__image" alt="">
+                    <img src="./images/stars.png" clas="testimonies__stars" alt="">
+                    <div class="aling-items-center">
+                    <p class="cardtestimonies__text">Muchas gracias por haber cuidado de Candy. La hemos echado mucho de menos estos dias... a ella parece que no le ha importado mucho jeje. Se nota que lo ha pasado super bien con vosotros. Y muchas gracias por las fotos y los videos, se la ve super contenta.</p>
+                    </div>
+                </div>
+                <div class="cardTestimonies">
+                    <h3 class="cardTestimonies__name">CARMELA</h3>
+                    <img src="./images/carmela.PNG" class="testimonies__image" alt="">
+                    <img src="./images/stars.png" clas="testimonies__stars" alt="">
+                    <div class="align-items-center">
+                    <p class="cardtestimonies__text">Deje a mi gatita Carmela con los chicos y me sorprendió lo rápido que se adaptó a estar con ellos! No estaba acostumbrada a otras personas y menos a otro hogar, pero gracias a la paciencia de los chicos pudo estar super bien acompañada en los días de nuestro viaje. Super recomendable!</p>
+                    </div>
                 </div>
                 <div class="cardTestimonies">
                     <h3 class="cardTestimonies__name">FELIPE</h3>
                     <img src="./images/felipe.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
-                    <p class="cardtestimonies__text">Hola!! Muchas gracias por todas tus respuestas y consejos! Vamos a ponerlo en práctica desde ya!!</p>
+                    <div class="align-items-center">
+                    <p class="cardtestimonies__text">Pusimos en práctica todo lo aprendido con los chicos y la conducta de Felipe mejoró muchísimo!</p>
+                    </div>
                 </div>
                 <div class="cardTestimonies">
                     <h3 class="cardTestimonies__name">LLUNA</h3>
                     <img src="./images/lluna.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
-                    <p class="cardtestimonies__text">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit sequi animi nihil obcaecati quia, at est, natus ducimus necessitatibus assumenda iste cupiditate rerum inventore eligendi autem repellat voluptas fugit fugiat?</p>
+                    <div class="align-items-center">
+                    <p class="cardtestimonies__text">"Teníamos problemas cuando salíamos a pasear con Lluna y gracias a las sesiones de educación canina con Lorena ahora nuestros paseos son mucho más tranquilos  y tanto Lluna como nosotros desfrutamos sin angustia esos paseos.</p>
+                    </div>
                 </div>
             </Section>
         </section>
