--- a/pages/work-with-us.html
+++ b/pages/work-with-us.html
@@ -4,6 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <meta name="keywords" content="Perro, gato, mascotas, guarderia, guarderia de mascotas, guauderia, bariloche, barcelona, adiestramiento, educación caninna">
+    <meta name="description" content="Guauderia Bariloche - Si sos amante de los animales, pasas mucho tiempo en casa y queres ganar dinero. Te invitamos a formar parte de nuestro equipo de cuidadores. No importa de donde seas nosotros te buscamos la mejor companía">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <title>Inicio - Guaudería</title>
