--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -41,7 +41,7 @@
               <div class="row">
                 <div class="col-12 col-md-8 col-lg-6 align-items-center">
                   <h1 class="aboutusHistory__titule">Nuestra Historia</h1>
-                  <h2 class="aboutusHistory__text">Lorem ipsum dolor sit amet consectetur. Nec et sagittis cursus venenatis feugiat nulla. At et maecenas nullam aliquet in porta praesent urna massa. Commodo integer sed feugiat volutpat magna. Ut felis imperdiet morbi sit iaculis. Arcu nisi dolor commodo platea nunc feugiat orci volutpat urna. Lectus varius scelerisque imperdiet sit aliquam. Eget pellentesque aliquam nibh tincidunt. . </h2>
+                  <h2 class="aboutusHistory__text">Somos Lorena y Dario, nuestra historia comenzó en el 2020, cuando decidimos comenzar a pasear y cuidar mascotas en nuestra casa de Bariloche. Al pincipio solo teniamos unos cuantos clientes y podiamos hacernos cargo de ellos nosotros mismos. Poco a poco más familias comenzaon a confiar en nosotros y decidimos ampliarnos sumando más cuidadores. Hoy en día la guauderia es un equipo de personas todas comprometidas con la seguridad y el bienestar de las mascotas que cuidamos. </h2>
                 </div>
                 <div class="col-12 col-md-4 col-lg-6 align-items-center">
                   <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
@@ -181,10 +181,10 @@
                     <div class="carousel-item">
                       <img src="../images/dario1.PNG" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item active">
+                    <div class="carousel-item">
                       <img src="../images/lore1.PNG" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item  active">
                       <img src="../images/kala1.PNG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
@@ -202,8 +202,8 @@
                 </div>
               </div>
               <div class="col-12 col-md-8 col-lg-6 align-items-center">
-                <h1 class="aboutusHistory__titule">Nuestra Historia</h1>
-                <h2 class="aboutusHistory__text">Lorem ipsum dolor sit amet consectetur. Nec et sagittis cursus venenatis feugiat nulla. At et maecenas nullam aliquet in porta praesent urna massa. Commodo integer sed feugiat volutpat magna. Ut felis imperdiet morbi sit iaculis. Arcu nisi dolor commodo platea nunc feugiat orci volutpat urna. Lectus varius scelerisque imperdiet sit aliquam. Eget pellentesque aliquam nibh tincidunt. . </h2>
+                <h1 class="aboutusHistory__titule">Guaudería en el Mundo</h1>
+                <h2 class="aboutusHistory__text">Hoy en día la Guaudería brinda servicios en Bariloche y en Barcelona. Esto se debe a que somos un poco viajeros y nos gusta ir haciendo nuevos amigos ahí donde vamos. Nuestro sueño es seguir conociendo lugares nuevos y sumar más personas que compartan nuestra pasión por los animales.</h2>
               </div>
               
             </div>
