--- a/pages/work-with-us.html
+++ b/pages/work-with-us.html
@@ -46,7 +46,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h1 class="workwithusBanner__titule animate__animated animate__fadeInDownBig">Formá parte de nuestro equipo</h1>
-                            <h2 class="workwithusBanner__subtitule animate__animated animate__fadeInDownBig">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio optio a sed sit? Inventore voluptatibus sit voluptatem eum vero, quia deleniti non. Officia libero, eveniet beatae quas tempora sunt illum?</h2>
+                            <h2 class="workwithusBanner__subtitule animate__animated animate__fadeInDownBig">Te encantan los animales, y compartir tiempo con ellos? Te gustaría colaborar en el cuidado de mascotas con nosotros? Si ambas respuestas son SI te invitamos a ponerte en contacto con nosotros para tener una entrevista y conocernos mejor.</h2>
                         </div>
                     </div>
                     <div class="row">
