--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Perro, gato, mascotas, guarderia, guarderia de mascotas, guauderia, bariloche, barcelona">
-    <meta name="description" content="Guarderia de mascotas, adiestramiento, educación caninca y paseos. Cada mascota es única y brindamos un servicio adecuado a sus necesidades">
+    <meta name="keywords" content="Perro, gato, mascotas, guarderia, guarderia de mascotas, guauderia, bariloche, barcelona, adiestramiento, educación caninna">
+    <meta name="description" content="Guardería de mascotas, adiestramiento, educación caninca y paseos. Cada mascota es única y brindamos un servicio adecuado a sus necesidades. Si tenes que viajar o trabajas muchas horas contá con nosotros para que no este solo">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
